fixed error on mobile menu becuase sizes where different on some mobiles

--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,8 @@ main{
 .cart{
     position: fixed;
     padding: 8px 16px;
-    width: 320px;
+    width: 100%;
+    max-width: 540px;
     height: calc(100vh - 52px);
     background-color: var(--light-cyan);
     scroll-behavior: smooth;
@@ -484,7 +485,8 @@ main{
     overflow-x: hidden;
     overflow-y: auto;
     scroll-behavior: smooth;
-    width: 320px;
+    width: 100%;
+    max-width: 540px;
     padding: 8px 0 24px;
     height: calc(100vh - 52px);
     background-color: var(--white);
